--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 *::after {
     box-sizing: border-box;
     margin: 0;
+    line-height: 1;
 }
 
 @font-face {
@@ -76,6 +77,7 @@ h1, p {
 .text-preset-1 {
     color: var(--color-slate-900);
     font-size: 22px;
+    font-style: normal;
     font-weight: 700;
     line-height: 120%;
     letter-spacing: 0;
@@ -84,6 +86,7 @@ h1, p {
 .text-preset-2 {
     color: var(--color-slate-500);
     font-size: 15px;
+    font-style: normal;
     font-weight: 400;
     line-height: 140%;
     letter-spacing: 0.2px;
